Fix layout issue

--- a/frontend/src/components/Input/styles.module.scss
+++ b/frontend/src/components/Input/styles.module.scss
@@ -44,7 +44,6 @@
 		position: relative;
 		display: flex;
 		gap: 15px;
-		height: 40px;
 
 		&Mobile {
 			flex-direction: column;
